Ajustes codeSmell